--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Sound Board</title>
   </head>
   <body>
-    <h1>The Techno Sourdough Starter</h1>
+
     <script src="script.js"></script>
   </body>
 </html>
